--- a/content/00_notebook_intro.ipynb
+++ b/content/00_notebook_intro.ipynb
@@ -16,23 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<iframe src=http://pysal.org/?useformat=mobile width=800 height=550></iframe>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from IPython.display import HTML\n",
     "HTML('<iframe src=http://pysal.org/?useformat=mobile width=800 height=550></iframe>')"
@@ -177,7 +163,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cell Types"
+    "## [Cell Types](http://jupyter-notebook.readthedocs.io/en/stable/notebook.html#structure-of-a-notebook-document)"
    ]
   },
   {
@@ -188,8 +174,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In command mode, `y` will set the cell to code. After that, pressing `Enter` will let you edit the text."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,14 +210,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Text Cells"
+    "### Raw Cells"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In command mode, `t` will set the cell to text. After that, pressing `Enter` will let you edit the text."
+    "*Raw cells provide a place in which you can write output directly*. In command mode, `r` will set the cell to text. After that, pressing `Enter` will let you edit the text."
    ]
   },
   {
@@ -261,7 +254,7 @@
     "\n",
     "$$ y = \\rho W y + X\\beta + \\epsilon$$\n",
     "\n",
-    "**NOTE**: LaTeX will only render if mathjax is available via a network connection or if it has been installed locally."
+    "**NOTE**: LaTeX will only render if [mathjax](https://www.mathjax.org/) is available via a network connection or if it has been installed locally."
    ]
   },
   {
@@ -316,7 +309,7 @@
     "\n",
     "* [Book](http://camdavidsonpilon.github.io/Probabilistic-Programming-and-Bayesian-Methods-for-Hackers/)\n",
     "* [Course](http://learnds.com)\n",
-    "* [Gallery](https://github.com/ipython/ipython/wiki/A-gallery-of-interesting-IPython-Notebooks)"
+    "* [Gallery](https://github.com/jupyter/jupyter/wiki/A-gallery-of-interesting-Jupyter-Notebooks)"
    ]
   },
   {
