--- a/content/13_global_texas.ipynb
+++ b/content/13_global_texas.ipynb
@@ -58,6 +58,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pysal.contrib.viz import mapping as maps\n",
+    "import matplotlib.pyplot as plt\n",
+    "maps.geoplot(data, col=\"HR90\",classi=\"Quantiles\",k=7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import geopandas as gpd\n",
@@ -98,7 +109,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "data = ps.pdio.read_files(\"data/texas.shp\")\n",
     "W = ps.queen_from_shapefile(\"data/texas.shp\")\n",
     "W.transform = 'r'"
@@ -228,7 +238,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Thus, the $I$ statistic is $0.859$ for this data, and has a very small $p$ value. "
+    "Thus, the $I$ statistic is $0.0859$ for this data, and has a very small $p$ value. "
    ]
   },
   {
@@ -349,6 +359,13 @@
     "I_pv = [ps.Moran(data[var].values, W).p_sim for var in ['HR60', 'HR70', 'HR80', 'HR90']]\n",
     "I_pv"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
